app/src/style.css
/* body {
  margin: 0;
  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
    sans-serif;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

code {
  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
    monospace;
} */

* {
  box-sizing: border-box;
  font-family: 'Figtree', "Lato", "Helvetica Neue", "Helvetica", sans-serif;
}

body {
  background-color: #ECECEC;
  height: 100%;
}

/* navbar */

.navbar {
  height: 82px;
}

.navbar-brand {
  margin-right: 100px;
}

.headerColor {
  background-color: #151515;
}

.form-control {
  border-radius: 40px;
  height: 42px;
  width: 242px;
}

.nav-link {
  color: white;
}

.nav-icon {
  height: 20px;
}

a {
  color: white;
  text-decoration: none;
}

.nav-text {
  font-size: 16px;
}

/* .navbar-nav ul li {
  padding-right: 2%;
} */

/* ALL PROFILE CARD STUFF */

.profile-card {
  /* padding: 40px 60px; */
  margin: 32px;
  border-radius: 2em;
}

.profile-background {
  height: 150px;
  object-fit: cover;
  border-radius: 2em 2em 0 0;
}

.profile-img {
  height: 7rem;
  width: 7rem;
  transform: translate(30%, -125%);
}

.gamer-tag {
  /* position: relative; */
  /* left: 13%;
  top: 47%; */
  transform: translate(13%, -80%);
  color: white;
  font-weight: 700;
  width: auto;
}

.card-body-height {
  height: 2em;
}

.status {
  /* position: absolute;
  left: 13%;
  bottom: 15%; */
  transform: translate(13%, -250%);
  width: auto;
}

hr {
  color: black;
  opacity: 1;
  margin-top: 0;
}

/* ALL GAME CARD STUFF */

.experience-header {
  font-weight: 700;
}

.stat-cluster {
  margin-left: 3em;
  margin-right: 3em;
}

.stat-card {
  background-color: #EEF3FF;
  border-radius: 2em;
}

.stat-number {
  font-size: 3em;
  font-weight: bold;
  color: #058F76;
}

/* EXPERIENCE CARD */

.header-text {
  font-family: 'all-round-gothic';
  font-style: normal;
  font-weight: 600;
  font-size: 28px;
  line-height: 36px;
}

/* INFO CARD */

.info-card {
  padding: 40px 60px 40px 60px;
  margin: 32px;
  border-radius: 2em;
}

.info-list {
  list-style: none;
  margin-left: 0;
  padding-left: 1em;
  /* text-indent: em; */
}

.info-head {
  font-family: 'Figtree';
  font-style: normal;
  font-weight: 600;
  font-size: 18px;
  line-height: 22px;
  margin-bottom: 0;
}

.info-text {
  font-family: 'Figtree';
  font-style: normal;
  font-weight: 400;
  font-size: 18px;
  line-height: 164.52%;
  margin-bottom: 0;
}

.info-icon {
  margin-right: 32px;
}

.info-col {
  padding-right: 0;
  width: 37.35%;
  flex: 0 0 37.35%;
  max-width: 37.35%;
}

.main-col {
  padding-left: 0;
}

.info-item {
  margin-bottom: 20px;
}

.card-body {
  padding: 0;
}

.profile-btn {

}

